	  SRAM to be functional (2013-6-28).
	* arch/arm/src/sam34/sam3u_gpio.c:  Need to disable write
	  protection before configuring PIO pins.
	* configs/sam3u-ek/nsh:  The touchscreen is now function.  The above
	  fix to the sam3u_gpio.c write protection also fixed the touchscreen
	  problem (2013-6-28).
	* confgis/sam3u_ek/nxwm:  Created a configuration for the NxWM
	  window manager for the SAM3U-EK board (2013-6-29).
	* drivers/spi and include/nuttx/spi:  New sub-directories to hold
	  SPI-related files.  includes/nuttx/spi.h moved to include/nuttx/spi/.;
	  SPI-related Kconfig info moved from drivers/Kconfig to drivers/spi/kconfig
	  (2013-7-1).
	* drivers/spi/spi_bitbang.c and include/nuttx/spi/spi_bitbang.h:  Add
	  support for a generic bit-bang SPI driver.  This checkout is the
	  common upper-half logic.  Still missing the lower half (2013-7-1).
	* include/nuttx/spi/spi_bitbang.c:  This is the common lower-half bit-
	  bang SPI logic (2013-7-1).
	* configs/arduino-due/src/sam_nsh.c and sam_mmcsd.c:  Add NSH customize
	  initialization.  If so configured, initialize the SPI bit bang
	  interface to the MMC/SD slot on the ITEAD shield (2013-7-1).
	* fs/fs_mount.c:  Fix compilation error if no file systems are enabled:
	  Change error to ERROR (2013-7-3).
	* arch/arm/src/sam34/sam_gpioirq.c:  Fix some errors for interrupts
	  on ports D-F (2013-7-3).
	* /drivers/usbdev/composite.c: Fix a type in the composite device
	  driver unitialization logic.  DEV1 should be DEV2 in one case
	  (2013-7-4).
	* arch/arm/src/sam34/sam3u_gpio.c:  sam_configgpio() must protect
	  against re-entrancy (2013-7-5).
	* libc/misc/lib_crc16.c and include/crc16.h:  Add CRC16 support
	  (2013-7-7).
	* arch/arm/src/stm32/stm32_otgfsdev.c:  SourceForge bug #16:  Fix
	  endpoint allocation logic.  The same endpoint can be allocated as
	  an IN or an OUT endpoint.  The implementation only support one
	  allocation, either IN or OUT (From Chia Cheng Tsao, 2013-7-8).